templates/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/configuration-snippet: |
      #client_max_body_size 100M;
      default_type  application/octet-stream;
      sendfile        on;
      #tcp_nopush     on;
      keepalive_timeout  1d;
      fastcgi_read_timeout 1d;
      #proxy_read_timeout 1d;
      #gzip  on;
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/session-cookie-name: route
  name: prometheus-ingress
spec:
  rules:
  - host: prom.gfn-test.ru
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
  - host: am.prom.gfn-test.ru
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: 9093
        path: /
  tls:
  - hosts:
    - prom.gfn-test.ru
    - am.prom.gfn-test.ru
    secretName: prom-tls
